# bhumi

./: README.md  bhumi-server.sh  pyproject.toml
src/bhumi/: __init__.py  app.py  data.py  science.py
src/bhumi/static/: app.js  style.css
src/bhumi/templates/: index.html  source.html
