[project]
name = "bhumi"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.0",
    "fastapi>=0.115",
    "gala>=1.11.0",
    "h5py>=3.10",
    "jinja2>=3.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bhumi"]
